--- a/코어 자바스크립트/1회독/1장/데이터 타입(1~3).md
+++ b/코어 자바스크립트/1회독/1장/데이터 타입(1~3).md
@@ -1,4 +1,4 @@
-# 데이터 타입 :star:
+# 데이터 타입(1~3) :star:
 - 자바스크립트가 데이터를 처리하는 과정을 살펴봄으로써 **기본형 타입** 과 **참조형 타입** 이 서로 다르게 동작하는
 
 이유를 이해하고 이를 적절히 활용할 수 있게 되는 것을 목표로 한다.
