feat: 데이터 타입(4) 학습 내용 정리 완료

--- a/코어 자바스크립트/1회독/1장/데이터 타입(4).md
+++ b/코어 자바스크립트/1회독/1장/데이터 타입(4).md
@@ -144,3 +144,49 @@ let obj = {
 - 기존의 값을 재할당 하는 경우 기존값의 참조 카운트가 1이었다가 재할당이 되면서 참조 카운트는 0이 되는데, 참조 카운트가 0인 메모리 주소는 **가비지 컬렉터** 의 수거 대상이 된다. 가비지 컬렉터는 런타임 환경에 따라 특정 시점이나 메모리 사용량이 포화 상태에 임박할 때마다 자동으로 수거 대상들을 수거 한다. 수거된 메모리는 다시 새로운 값을 할당할 수 있는 빈 공간이 된다.
 
 ### :meat_on_bone: 변수 복사 비교
+```js
+let a = 10;
+let b = a;
+
+let obj1 = {c : 10, d : 'test'};
+
+let obj2 = obj1;
+```
+- a 의 데이터 값의 주소로 이동하면 데이터 값이 10임을 알 수 있다. b 에 a 를 할당하는 과정은 우선 a 식별자를 검색하여 검색결과가 있음을 확인하고 그 데이터 값을 b에 할당한다.
+- obj1 의 데이터 값의 주소로 이동하면 객체를 이루는 데이터의 범위 주소가 나오고 각각의 주소로 이동하면 c 와 d 의 데이터 주소가 나와 그 주소를 통해 각각 10, 'test' 의 데이터 값을 확인 할 수 있다. 여기서 'obj2 = obj1' 으로 복사하는 방식은 얕은 복사로 obj2 가 obj1 의 변수와 식별자, 데이터를 모두 가져오는 것은 맞지만, obj2 에 데이터 값에 저장된 것은 obj1 의 데이터 값의 주소이다. **얕은 복사** 는 **깊은 복사** 와 달리 후에 동작에서 큰 차이를 보인다.
+
+#### :poultry_leg: 얕은 복사
+
+- 위에서 진행한 객체의 복사는 얕은 복사라고 했다. 그렇다면 얕은 복사를 했을 때 객체 값을 변경한다면 어떻게 될지 살펴보자.
+
+```js
+let a = 10;
+let b = a;
+let obj1 = {c : 10, d : 'test'};
+let obj2 = obj1;
+
+b = 15;
+obj2.c = 20;
+```
+
+- 위에서 진행한 바와 같이 데이터의 얕은 복사가 이루어지고 b 는 15로 obj2 의 c 는 20으로 변경하였다. 단순하게 생각하면 obj2.c 의 값을 바꾼 것 이기 때문에 obj1.c 는 10 이고 obj2.c 는 20 나타낼 것으로 기대된다. 하지만, 기대한 바와는 다른 결과값이 나오는데 왜 그런지 그 과정을 살펴보자.
+
+- 우선 obj2 는 obj1 의 데이터영역의 주소를 공유한다. 그렇기에 그 주소로 이동하여 c 를 찾을 것이고 그 c 의 데이터 주소로 이동하여 데이터 값을 10 에서 20 으로 변경을 한다. 이로 인해 obj1 와 obj2 의 c 는 같은 주소로 연결되어 있기 때문에 obj2 의 c 만 20 으로 변경되는 것이 아닌 obj1 의 c 또한 20 으로 변경된다.
+
+```js
+// 위 코드의 결과 a 와 b, obj1 과 obj2 의 비교 
+a !== b;
+obj1 === obj2;
+```
+
+:bulb: 이것이 기본형과 참조형의 가장 큰 차이점이다. 기본형은 주솟값을 복사하는 과정이 한 번만 이뤄지고, 참조형은 한 단계를 더 거치는 차이가 있다.
+
+- 그렇다면 객체의 프로퍼티를 변경하는 것이 아닌 객체 자체를 새로 할당한다면 어떻게 될지 알아보자.
+
+- 위와 마찬가지로 할당과 복사는 동일한 과정으로 이루어 진다. 다만, obj2 에 새로운 객체를 할당하면 객체 안에 같은 값이 존재하더라도 그 별도의 주소에 저장되기 때문에 더 이상 obj1 과 obj2 는 다른 주소를 갖게 된다.
+
+:bulb: 즉, 참조형 데이터가 **가변값** 이라고 설명할 때의 **가변** 은 참조형 데이터 자체를 변경하는 경우가 아니라 그 내부의 **프로퍼티** 를 변경할 때만 성립한다.
+
+
+## :guardsman: 느낀점
+공부를 하면서 기본형 데이터는 모두 불변값이라고 하고 참조형 데이터는 가변값이라고 하는데, 막상 사용할 때 보면 기본형 데이터의 값을 바꿀 수 있다는 것에 의문을 갖고 있었는데, 이번 학습을 진행하면서 참조형은 객체 안에 프로퍼티를 할당할 수 있고 그 프로퍼티는 변경이 가능하여 가변값이라 할 수 있고, 기본형은 일단 한번 프로퍼티가 정해지면 그 프로퍼티를 변경할 수 없다는 점에서 불변값이라는 것을 알 수 있었다. 프리코스나 코드테스트를 진행하면서 이 개념에 대해 얕은 지식을 가지고 참여를 해도 지장이 없었다는 등의 안일한 생각을 했었으나, 자세한 내용을 알고 개념을 습득하니 더 섬세한 조작이 필요한 부분이구나 라는 생각이 들었다. 1장의 4절범위가 쪽수에 비해 이해하는 시간이 오래 걸렸으나 이해를 하고 나서 정리를 하니 그 시간의 중요성을 몸소 체험한 장이었다. 이 책을 완주하는데 시간은 오래걸릴게 당연하나 이 책으로 얻어가는 지식이 처음부터 이렇게 소중함을 느낄 수 있어 뜻깊었다.
